# advent-of-code

./: .gitignore  README.md
go/: README.md  go.mod
go/2019/day-1/: benchmark_10.txt  day_1.go  day_1_test.go
go/2019/day-2/: day_2.go  day_2_test.go
go/2024/: day_1.go  day_1_test.go
python/2024/: day_1.py  day_9.py
rust/: Cargo.toml  README.md  benchmarks.md  pbcopy
rust/benches/: benchmarks.rs
rust/src/: lib.rs  main.rs
rust/src/year_2019/day_1/: mod.rs
rust/src/year_2019/day_2/: mod.rs
rust/src/year_2019/day_3/: mod.rs
rust/src/year_2019/day_4/: mod.rs
rust/src/year_2024/day_00/: mod.rs
rust/src/year_2024/day_01/: mod.rs
rust/src/year_2024/day_02/: mod.rs
rust/src/year_2024/day_03/: mod.rs
rust/src/year_2024/day_04/: mod.rs
rust/src/year_2024/day_05/: mod.rs
rust/src/year_2024/day_06/: mod.rs
rust/src/year_2024/day_07/: mod.rs
rust/src/year_2024/day_08/: mod.rs
rust/src/year_2024/day_09/: mod-3.rs  mod.rs
rust/src/year_2024/day_10/: mod.rs
rust/src/year_2024/day_11/: mod.rs
rust/src/year_2024/day_12/: mod.rs
rust/src/year_2024/day_13/: mod.rs
rust/src/year_2024/day_14/: mod.rs
rust/src/year_2024/day_15/: mod.rs
zig/.zig-cache/o/5289092aba2d333f8612b0d4499b1458/: build
zig/src/: day-01.zig
